--- a/webapp/package.json
+++ b/webapp/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.3",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
