--- a/webapp/package.json
+++ b/webapp/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.6",
     "@ai-sdk/openai": "^1.1.9",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.2",
