--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "app"
+name = "wayfind"
 version = "0.1.0"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["mtn"]
 license = ""
 repository = ""
 edition = "2021"
@@ -22,4 +22,6 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
-tauri-plugin-log = "2.0.0-rc"
+tauri-plugin-dialog = "2.2.0"
+tauri-plugin-log = "2.2.1"
+tauri-plugin-shell = "2.2.0"
