--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -18,10 +18,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2.0.4", features = [] }
 
 [dependencies]
-serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 log = "0.4"
 tauri = { version = "2.2.4", features = [] }
 tauri-plugin-dialog = "2.2.0"
 tauri-plugin-log = "2.2.1"
 tauri-plugin-shell = "2.2.0"
+tokio = { version = "1.43.0", features = ["full"] }
+serde_json = "1.0.139"
+rand = "0.9.0"
