--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -21,3 +21,4 @@ tauri-plugin-shell = "2.2.0"
 tokio = { version = "1.43.0", features = ["full"] }
 serde_json = "1.0.139"
 rand = "0.9.0"
+parking_lot = "0.12.3"
