--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "ai": "^4.1.45",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.18.2"
   },
   "devDependencies": {
