--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 resolver = "2"
-members = ["app/src-tauri", "dap/rust_tests"]
+members = ["app/src-tauri", "dap/rust_tests", "dap/test_data/rust_program"]
