--- a/app/src-tauri/Cargo.toml
+++ b/app/src-tauri/Cargo.toml
@@ -22,3 +22,4 @@ tokio = { version = "1.43.0", features = ["full"] }
 serde_json = "1.0.139"
 rand = "0.9.0"
 parking_lot = "0.12.3"
+regex = "1.11.1"
