--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.1.6",
     "@ai-sdk/openai": "^1.1.9",
+    "@lexical/react": "^0.27.2",
     "@monaco-editor/react": "^4.6.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.1.2",
@@ -20,6 +21,7 @@
     "ai": "^4.1.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lexical": "^0.27.2",
     "lucide-react": "^0.475.0",
     "next": "14.2.16",
     "react": "^18",
