--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
     "ai": "^4.1.26",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.4",
     "lucide-react": "^0.475.0",
     "next": "14.2.16",
     "react": "^18",
