--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node-dev --respawn -r tsconfig-paths/register src/index.ts"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/openai": "^1.3.21",
     "ai": "^4.3.13",
     "body-parser": "^1.20.2",
